add "request-reset-password.yaml"
